--- a/index.html
+++ b/index.html
@@ -2,437 +2,297 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>League Table</title>
+  <title>Mysters Premier League Table</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
     :root {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      line-height: 1.5;
+      line-height: 1.4;
+      color: black;
     }
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: flex-start;
-      background: radial-gradient(circle at top, #f5f5ff, #e2e8f0);
-      padding: 2rem 1rem;
+      background: radial-gradient(circle at top, #0f172a 0%, #020617 50%, #000 100%);
+      padding: 1.5rem;
     }
 
     .page {
       width: 100%;
-      max-width: 960px;
-      background: #ffffff;
-      border-radius: 1.5rem;
-      box-shadow: 0 20px 40px rgba(15, 23, 42, 0.15);
-      padding: 1.75rem 1.75rem 2.25rem;
+      max-width: 650px;
+      background: #1e293b;
+      border-radius: 1.2rem;
+      padding: 1.4rem;
+      border: 1px solid rgba(255,255,255,0.08);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.55);
+      color: black;
     }
 
     header {
       display: flex;
       justify-content: space-between;
-      align-items: baseline;
-      gap: 1rem;
-      margin-bottom: 1.5rem;
       flex-wrap: wrap;
-    }
-
-    h1 {
-      font-size: 1.75rem;
-      letter-spacing: 0.03em;
-    }
-
-    .subtitle {
-      font-size: 0.9rem;
-      color: #64748b;
+      margin-bottom: 1rem;
+      gap: 0.5rem;
     }
 
     .tag {
-      display: inline-flex;
+      padding: 0.3rem 0.7rem;
+      background: linear-gradient(90deg, #ff0000, #ffd000);
+      border-radius: 0.8rem;
+      font-size: 0.7rem;
+      font-weight: 700;
+      letter-spacing: 0.12em;
+      color: black;
+      display: flex;
+      justify-content: center;
       align-items: center;
-      gap: 0.4rem;
-      padding: 0.25rem 0.65rem;
-      border-radius: 999px;
-      background: #eff6ff;
-      color: #1d4ed8;
-      font-size: 0.75rem;
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 0.07em;
+      min-width: 260px;
     }
 
-    .tag-dot {
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: #22c55e;
+    h1 {
+      font-size: 1.6rem;
+      margin-top: 0.4rem;
+      text-transform: uppercase;
+      color: black;
+    }
+
+    .subtitle {
+      font-size: 0.85rem;
+      color: black;
+    }
+
+    .right-meta {
+      text-align: right;
+      font-size: 0.82rem;
+      color: black;
     }
 
     .table-wrapper {
-      margin-top: 0.75rem;
       border-radius: 1rem;
-      border: 1px solid #e2e8f0;
+      border: 1px solid rgba(255,255,255,0.12);
       overflow: hidden;
-      background: #f9fafb;
+      background: #0f172a;
+      margin-top: 1rem;
     }
 
-    .table-scroll {
-      overflow-x: auto;
-    }
+    .table-scroll { overflow-x: auto; }
 
+    /* ★ Equal spacing on DESKTOP and MOBILE */
     table {
       width: 100%;
       border-collapse: collapse;
-      min-width: 640px;
+      table-layout: fixed;   /* key: equal spacing */
+      min-width: 520px;      /* allows scroll if too tight */
     }
 
-    thead {
-      background: #0f172a;
-      color: #e5e7eb;
-    }
+    thead { background: #1e293b; }
 
-    th,
-    td {
-      padding: 0.75rem 0.9rem;
-      text-align: center;
-      font-size: 0.9rem;
+    th, td {
+      padding: 0.45rem 0.25rem;
+      font-size: 0.85rem;
       white-space: nowrap;
+      text-align: center;
+      color: black;
     }
 
     th {
-      font-weight: 600;
+      font-size: 0.72rem;
       text-transform: uppercase;
-      letter-spacing: 0.08em;
-      font-size: 0.75rem;
+      letter-spacing: 0.12em;
     }
 
-    th.team,
-    td.team {
+    /* Team column = 30% width, left aligned */
+    th.team, td.team {
+      width: 30%;
       text-align: left;
+      padding-left: 0.25rem;
+      padding-right: 0.25rem;
+      font-weight: 600;
     }
 
-    tbody tr:nth-child(odd) {
-      background: #ffffff;
+    /* Stat columns share remaining 70% evenly (9 columns) */
+    th.stat, td.stat {
+      width: calc(70% / 9);
+      padding-left: 0.25rem;
+      padding-right: 0.25rem;
     }
 
-    tbody tr:nth-child(even) {
-      background: #f8fafc;
-    }
+    tbody tr:nth-child(odd)  { background: #e2e8f0; }
+    tbody tr:nth-child(even) { background: #f8fafc; }
 
     tbody tr:hover {
-      background: #e0f2fe;
+      background: #cbd5e1;
+      transition: 0.1s ease;
     }
 
-    .pos {
-      font-weight: 700;
-      color: #0f172a;
-    }
-
-    .team-name {
-      font-weight: 600;
-      color: #111827;
-    }
-
-    .team-note {
-      display: inline-block;
-      margin-left: 0.4rem;
-      font-size: 0.7rem;
-      padding: 0.1rem 0.35rem;
-      border-radius: 999px;
-      background: #dbeafe;
-      color: #1e3a8a;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-    }
-
-    .gd-positive {
-      color: #16a34a;
-      font-weight: 600;
-    }
-
-    .gd-negative {
-      color: #dc2626;
-      font-weight: 600;
-    }
-
-    .footer-note {
-      margin-top: 0.9rem;
-      font-size: 0.8rem;
-      color: #6b7280;
-      display: flex;
-      justify-content: space-between;
-      gap: 0.75rem;
-      flex-wrap: wrap;
-    }
-
-    .legend {
-      display: flex;
-      gap: 0.75rem;
-      flex-wrap: wrap;
-      align-items: center;
-    }
-
-    .legend-chip {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.25rem;
-      padding: 0.15rem 0.5rem;
-      border-radius: 999px;
-      background: #e5e7eb;
-      font-size: 0.75rem;
-    }
-
-    .legend-dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 999px;
-    }
-
-    .legend-dot--champions {
-      background: #22c55e;
-    }
-
-    .legend-dot--relegation {
-      background: #ef4444;
-    }
-
+    /* ---------------- MOBILE TWEAKS (same spacing logic, smaller) ---------------- */
     @media (max-width: 640px) {
+      body {
+        padding: 0.6rem;
+      }
+
       .page {
-        padding: 1.25rem 1rem 1.75rem;
-        border-radius: 1.25rem;
+        max-width: 100%;
+        padding: 0.8rem;
+        border-radius: 0.9rem;
+      }
+
+      header {
+        flex-direction: column;
+        gap: 0.6rem;
+      }
+
+      .tag {
+        min-width: auto;
+        font-size: 0.58rem;
+        padding: 0.22rem 0.45rem;
       }
 
       h1 {
-        font-size: 1.4rem;
+        font-size: 1.1rem;
       }
 
       .subtitle {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
+      }
+
+      .right-meta {
+        font-size: 0.7rem;
+      }
+
+      .table-wrapper {
+        margin-top: 0.7rem;
+      }
+
+      table {
+        min-width: 100%;
       }
 
       th,
       td {
-        padding: 0.55rem 0.7rem;
-        font-size: 0.8rem;
+        padding: 0.28rem 0.22rem;
+        font-size: 0.7rem;
       }
 
-      .footer-note {
-        font-size: 0.7rem;
+      th.team, td.team {
+        width: 30%;
+        padding-left: 0.22rem;
+        padding-right: 0.22rem;
+      }
+
+      th.stat, td.stat {
+        width: calc(70% / 9);
+        padding-left: 0.22rem;
+        padding-right: 0.22rem;
       }
     }
   </style>
 </head>
+
 <body>
   <main class="page">
     <header>
       <div>
-        <div class="tag">
-          <span class="tag-dot"></span>
-          Live Standings
-        </div>
-        <h1>Premier League Table</h1>
-        <p class="subtitle">Example league table — edit the teams and stats to match your own league.</p>
+        <div class="tag">Mysters Rocket League</div>
+        <h1>Premier League</h1>
+        <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
       </div>
-      <div class="subtitle">
-        Season: <strong>2025 / 26</strong><br />
-        Updated: <span id="last-updated"></span>
+
+      <div class="right-meta">
+        Season: <strong>1</strong><br />
+        Last updated: <strong id="last-updated"></strong>
       </div>
     </header>
 
     <section class="table-wrapper">
       <div class="table-scroll">
-        <table aria-label="League standings table">
+        <table aria-label="Standings">
           <thead>
             <tr>
-              <th>#</th>
+              <th class="stat">#</th>
               <th class="team">Team</th>
-              <th>P</th>
-              <th>W</th>
-              <th>D</th>
-              <th>L</th>
-              <th>GF</th>
-              <th>GA</th>
-              <th>GD</th>
-              <th>Pts</th>
+              <th class="stat">P</th>
+              <th class="stat">W</th>
+              <th class="stat">D</th>
+              <th class="stat">L</th>
+              <th class="stat">GF</th>
+              <th class="stat">GA</th>
+              <th class="stat">GD</th>
+              <th class="stat">Pts</th>
             </tr>
           </thead>
-          <tbody>
-            <!-- Row 1 -->
-            <tr>
-              <td class="pos">1</td>
-              <td class="team">
-                <span class="team-name">City FC</span>
-                <span class="team-note">Champions</span>
-              </td>
-              <td>38</td>
-              <td>28</td>
-              <td>6</td>
-              <td>4</td>
-              <td>85</td>
-              <td>30</td>
-              <td class="gd-positive">+55</td>
-              <td><strong>90</strong></td>
-            </tr>
-
-            <!-- Row 2 -->
-            <tr>
-              <td class="pos">2</td>
-              <td class="team">
-                <span class="team-name">United FC</span>
-                <span class="team-note">Europe</span>
-              </td>
-              <td>38</td>
-              <td>25</td>
-              <td>7</td>
-              <td>6</td>
-              <td>76</td>
-              <td>35</td>
-              <td class="gd-positive">+41</td>
-              <td><strong>82</strong></td>
-            </tr>
-
-            <!-- Row 3 -->
-            <tr>
-              <td class="pos">3</td>
-              <td class="team">
-                <span class="team-name">Rovers</span>
-                <span class="team-note">Europe</span>
-              </td>
-              <td>38</td>
-              <td>22</td>
-              <td>9</td>
-              <td>7</td>
-              <td>69</td>
-              <td>40</td>
-              <td class="gd-positive">+29</td>
-              <td><strong>75</strong></td>
-            </tr>
-
-            <!-- Row 4 -->
-            <tr>
-              <td class="pos">4</td>
-              <td class="team">
-                <span class="team-name">Athletic</span>
-              </td>
-              <td>38</td>
-              <td>19</td>
-              <td>10</td>
-              <td>9</td>
-              <td>60</td>
-              <td>42</td>
-              <td class="gd-positive">+18</td>
-              <td><strong>67</strong></td>
-            </tr>
-
-            <!-- Row 5 -->
-            <tr>
-              <td class="pos">5</td>
-              <td class="team">
-                <span class="team-name">Wanderers</span>
-              </td>
-              <td>38</td>
-              <td>17</td>
-              <td>11</td>
-              <td>10</td>
-              <td>55</td>
-              <td>44</td>
-              <td class="gd-positive">+11</td>
-              <td><strong>62</strong></td>
-            </tr>
-
-            <!-- Row 18 -->
-            <tr>
-              <td class="pos">18</td>
-              <td class="team">
-                <span class="team-name">County</span>
-                <span class="team-note">Relegation</span>
-              </td>
-              <td>38</td>
-              <td>8</td>
-              <td>7</td>
-              <td>23</td>
-              <td>31</td>
-              <td>63</td>
-              <td class="gd-negative">-32</td>
-              <td><strong>31</strong></td>
-            </tr>
-
-            <!-- Row 19 -->
-            <tr>
-              <td class="pos">19</td>
-              <td class="team">
-                <span class="team-name">Albion</span>
-                <span class="team-note">Relegation</span>
-              </td>
-              <td>38</td>
-              <td>7</td>
-              <td>8</td>
-              <td>23</td>
-              <td>29</td>
-              <td>65</td>
-              <td class="gd-negative">-36</td>
-              <td><strong>29</strong></td>
-            </tr>
-
-            <!-- Row 20 -->
-            <tr>
-              <td class="pos">20</td>
-              <td class="team">
-                <span class="team-name">Town FC</span>
-                <span class="team-note">Relegation</span>
-              </td>
-              <td>38</td>
-              <td>5</td>
-              <td>9</td>
-              <td>24</td>
-              <td>25</td>
-              <td>71</td>
-              <td class="gd-negative">-46</td>
-              <td><strong>24</strong></td>
-            </tr>
-          </tbody>
+          <tbody id="league-body"></tbody>
         </table>
       </div>
     </section>
-
-    <div class="footer-note">
-      <div class="legend">
-        <span>Legend:</span>
-        <span class="legend-chip">
-          <span class="legend-dot legend-dot--champions"></span> Champions / Europe
-        </span>
-        <span class="legend-chip">
-          <span class="legend-dot legend-dot--relegation"></span> Relegation
-        </span>
-      </div>
-      <span>Edit this page in your code editor to update team names, matches, and points.</span>
-    </div>
   </main>
 
   <script>
-    // Set a simple "last updated" timestamp
-    (function () {
-      const el = document.getElementById("last-updated");
-      if (!el) return;
+    const SHEET_CSV_URL =
+      "https://docs.google.com/spreadsheets/d/1ilDa0ZleooN3OBruvtOqF9Ym1CitowFjaLCk1GiYiNc/export?format=csv&gid=829195735";
 
-      const now = new Date();
-      const formatter = new Intl.DateTimeFormat(undefined, {
-        year: "numeric",
-        month: "short",
-        day: "2-digit",
-        hour: "2-digit",
-        minute: "2-digit",
+    function parseCsv(text) {
+      const rows = text.trim().split("\n").map(r => r.split(","));
+      const [header, ...data] = rows;
+
+      return data.map(cols => ({
+        pos: cols[0],
+        team: cols[1],
+        played: cols[2],
+        wins: cols[3],
+        draws: cols[4],
+        losses: cols[5],
+        gf: cols[6],
+        ga: cols[7],
+        gd: cols[8],
+        pts: cols[9],
+        colour: cols[10],
+      }));
+    }
+
+    function renderTable(teams) {
+      const tbody = document.getElementById("league-body");
+      tbody.innerHTML = "";
+
+      teams.forEach(t => {
+        const row = document.createElement("tr");
+
+        if (t.colour) row.style.backgroundColor = t.colour;
+
+        row.innerHTML = `
+          <td class="stat">${t.pos}</td>
+          <td class="team">${t.team}</td>
+          <td class="stat">${t.played}</td>
+          <td class="stat">${t.wins}</td>
+          <td class="stat">${t.draws}</td>
+          <td class="stat">${t.losses}</td>
+          <td class="stat">${t.gf}</td>
+          <td class="stat">${t.ga}</td>
+          <td class="stat">${t.gd}</td>
+          <td class="stat"><strong>${t.pts}</strong></td>
+        `;
+
+        tbody.appendChild(row);
       });
+    }
 
-      el.textContent = formatter.format(now);
-    })();
+    async function loadLeagueTable() {
+      const res = await fetch(SHEET_CSV_URL);
+      const text = await res.text();
+      const teams = parseCsv(text);
+      renderTable(teams);
+      document.getElementById("last-updated").textContent =
+        new Date().toLocaleString();
+    }
+
+    loadLeagueTable();
   </script>
 </body>
 </html>
