--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       background: #1e293b;
       border-radius: 1.2rem;
       padding: 1.4rem;
-      border: 3px solid black; /* OUTER BORDER 3px */
+      border: 1px solid black; /* outer border = 1px */
       box-shadow: 0 8px 20px rgba(0,0,0,0.55);
       color: black;
     }
@@ -71,14 +71,14 @@
       overflow: hidden;
       background: #0f172a;
       margin-top: 1rem;
-      border: 3px solid black; /* OUTER TABLE BORDER */
+      border: 1px solid black; /* outer table border = 1px */
     }
 
     .table-scroll { overflow-x: auto; }
 
     table {
       width: 100%;
-      border-collapse: separate;
+      border-collapse: separate !important;
       border-spacing: 0;
       table-layout: fixed;
       min-width: 520px;
@@ -91,9 +91,9 @@
       font-size: 0.85rem;
       white-space: nowrap;
       text-align: center;
-      color: black;
-      border: 1px solid black;   /* INNER GRID BORDER (thin) */
+      border: 1px solid black; /* inner grid lines = 1px */
       background-clip: padding-box;
+      color: black;
     }
 
     th {
@@ -113,13 +113,14 @@
       width: calc(70% / 9);
     }
 
-    tbody tr:nth-child(odd) { background: #e2e8f0; }
+    tbody tr:nth-child(odd)  { background: #e2e8f0; }
     tbody tr:nth-child(even) { background: #f8fafc; }
 
     tbody tr:hover { background: #dfe6ee; transition: 0.1s ease; }
 
     /* ---------------- MOBILE VERSION ---------------- */
     @media (max-width: 640px) {
+
       body { padding: 0.6rem; }
 
       .page {
@@ -139,7 +140,7 @@
       th, td {
         padding: 0.28rem 0.22rem;
         font-size: 0.7rem;
-        border-width: 1px; /* still thin on mobile */
+        border-width: 1px;
       }
 
       th.team, td.team { width: 30%; }
