--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       border-radius: 1.2rem;
       padding: 1.4rem;
       box-shadow: 0 8px 20px rgba(0,0,0,0.55);
-      color: black;
     }
 
     header {
@@ -65,34 +64,35 @@
     .subtitle { font-size: 0.85rem; }
     .right-meta { text-align: right; font-size: 0.82rem; }
 
-    /* === OUTER TABLE BORDER + ROUNDED CORNERS === */
+    /* --- TABLE WRAPPER --- */
     .table-wrapper {
       margin-top: 1rem;
       border-radius: 1rem;
-      overflow: hidden;                 /* clips inner table to rounded edge */
+      overflow: hidden; /* smooth corners */
       background: #0f172a;
-      border: 1px solid black;          /* ★ visible outer border */
     }
 
     .table-scroll { overflow-x: auto; }
 
+    /* --- BORDERLESS TABLE --- */
     table {
       width: 100%;
-      border-collapse: collapse;        /* share borders, no doubles */
+      border-collapse: collapse;
       table-layout: fixed;
       min-width: 520px;
-      border: none;                     /* no extra outer border */
+      border: none; /* removed */
     }
 
-    thead { background: #1e293b; }
+    thead {
+      background: #1e293b;
+    }
 
     th, td {
       padding: 0.45rem 0.25rem;
       font-size: 0.85rem;
       white-space: nowrap;
       text-align: center;
-      border: 1px solid black;          /* inner grid lines */
-      background-clip: padding-box;
+      border: none; /* ★ removed all borders */
       color: black;
     }
 
@@ -102,7 +102,6 @@
       letter-spacing: 0.12em;
     }
 
-    /* Team column ~30% */
     th.team, td.team {
       width: 30%;
       text-align: left;
@@ -111,7 +110,6 @@
       font-weight: 600;
     }
 
-    /* 9 stat columns share 70% */
     th.stat, td.stat {
       width: calc(70% / 9);
     }
@@ -121,7 +119,7 @@
       transition: 0.1s ease;
     }
 
-    /* ---------------- MOBILE VERSION ---------------- */
+    /* ---------------- MOBILE ---------------- */
     @media (max-width: 640px) {
       body { padding: 0.6rem; }
 
@@ -137,21 +135,14 @@
       .subtitle { font-size: 0.7rem; }
       .right-meta { font-size: 0.7rem; }
 
-      .table-wrapper {
-        margin-top: 0.7rem;
-        border-radius: 0.8rem;
-      }
+      .table-wrapper { border-radius: 0.8rem; }
 
       table { min-width: 100%; }
 
       th, td {
         padding: 0.28rem 0.22rem;
         font-size: 0.7rem;
-        border-width: 1px;
       }
-
-      th.team, td.team { width: 30%; }
-      th.stat, td.stat { width: calc(70% / 9); }
     }
   </style>
 </head>
