--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       background: #1e293b;
       border-radius: 1.2rem;
       padding: 1.4rem;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.55);
+      /* shadow removed */
     }
 
     header {
@@ -71,8 +71,8 @@
       overflow: hidden;
       background: #0f172a;
 
-      /* Soft outline instead of a hard border */
-      box-shadow: 0 0 0 2px rgba(0,0,0,0.45);
+      /* outline/shadow removed */
+      box-shadow: none;
     }
 
     .table-scroll {
@@ -106,7 +106,7 @@
       letter-spacing: 0.12em;
     }
 
-    /* Horizontal thin separators */
+    /* Horizontal separators */
     thead tr { border-bottom: 1px solid rgba(0,0,0,0.45); }
     tbody tr { border-bottom: 1px solid rgba(0,0,0,0.3); }
     tbody tr:last-child { border-bottom: none; }
@@ -117,7 +117,6 @@
       border-left: 1px solid rgba(0,0,0,0.25);
     }
 
-    /* Team column ~30% */
     th.team, td.team {
       width: 30%;
       text-align: left;
@@ -126,7 +125,6 @@
       font-weight: 600;
     }
 
-    /* Stat columns share remaining 70% */
     th.stat, td.stat {
       width: calc(70% / 9);
     }
