--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       justify-content: center;
       align-items: flex-start;
       background: radial-gradient(circle at top, #0f172a 0%, #020617 50%, #000 100%);
-      padding: 1.5rem;
-      overflow-x: hidden; /* prevent any sideways scroll */
+      padding: 0.75rem;              /* reduced from 1.5rem */
+      overflow-x: hidden;
     }
 
     .page {
@@ -33,7 +33,7 @@
       max-width: 650px;
       background: #1e293b;
       border-radius: 1.2rem;
-      padding: 1.4rem;
+      padding: 1rem 1rem 0.9rem;      /* reduced from 1.4rem */
       box-shadow: 0 8px 20px rgba(0,0,0,0.55);
     }
 
@@ -41,12 +41,12 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      margin-bottom: 1rem;
-      gap: 0.5rem;
+      margin-bottom: 0.6rem;         /* reduced from 1rem */
+      gap: 0.4rem;
     }
 
     .tag {
-      padding: 0.3rem 0.7rem;
+      padding: 0.25rem 0.6rem;
       background: linear-gradient(90deg, #ff0000, #ffd000);
       border-radius: 0.8rem;
       font-size: 0.7rem;
@@ -56,45 +56,44 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-width: 260px;
+      min-width: 220px;
     }
 
     h1 {
-      font-size: 1.6rem;
-      margin-top: 0.4rem;
+      font-size: 1.55rem;
+      margin-top: 0.3rem;
       text-transform: uppercase;
       color: black;
     }
 
     .subtitle {
-      font-size: 0.85rem;
+      font-size: 0.82rem;
       color: black;
     }
 
     .right-meta {
       text-align: right;
-      font-size: 0.82rem;
+      font-size: 0.8rem;
       color: black;
     }
 
     /* --- TABLE WRAPPER --- */
     .table-wrapper {
-      margin-top: 1rem;
+      margin-top: 0.5rem;            /* reduced from 1rem */
       border-radius: 1rem;
       overflow: hidden;
       background: #0f172a;
       box-shadow: 0 0 0 2px rgba(0,0,0,0.45); /* soft outline */
     }
 
-    /* method 3: no inner scroll area, let page handle it smoothly */
     .table-scroll {
-      overflow: visible;
+      overflow: visible;             /* let page handle scroll */
     }
 
     /* --- CLEAN TABLE WITH THIN SEPARATORS --- */
     table {
       width: 100%;
-      min-width: 0;              /* allow it to shrink with container */
+      min-width: 0;
       border-collapse: collapse;
       table-layout: fixed;
       border: none;
@@ -106,8 +105,8 @@
 
     th,
     td {
-      padding: 0.45rem 0.25rem;
-      font-size: 0.85rem;
+      padding: 0.4rem 0.22rem;       /* slightly reduced */
+      font-size: 0.82rem;
       white-space: nowrap;
       text-align: center;
       border: none;
@@ -115,7 +114,7 @@
     }
 
     th {
-      font-size: 0.72rem;
+      font-size: 0.7rem;
       text-transform: uppercase;
       letter-spacing: 0.12em;
     }
@@ -163,38 +162,41 @@
     /* ---------------- MOBILE ---------------- */
     @media (max-width: 640px) {
       body {
-        padding: 0.6rem;
+        padding: 0.5rem;
       }
 
       .page {
-        padding: 0.8rem;
+        padding: 0.7rem 0.7rem 0.6rem;
         border-radius: 0.9rem;
       }
 
       header {
         flex-direction: column;
-        gap: 0.6rem;
+        gap: 0.5rem;
+        margin-bottom: 0.5rem;
       }
 
       .tag {
         font-size: 0.58rem;
-        padding: 0.22rem 0.45rem;
+        padding: 0.2rem 0.4rem;
+        min-width: 0;
       }
 
       h1 {
-        font-size: 1.1rem;
+        font-size: 1.05rem;
       }
 
       .subtitle {
-        font-size: 0.7rem;
+        font-size: 0.68rem;
       }
 
       .right-meta {
-        font-size: 0.7rem;
+        font-size: 0.68rem;
       }
 
       .table-wrapper {
         border-radius: 0.8rem;
+        margin-top: 0.4rem;
       }
 
       table {
@@ -203,8 +205,8 @@
 
       th,
       td {
-        padding: 0.28rem 0.22rem;
-        font-size: 0.7rem;
+        padding: 0.24rem 0.18rem;
+        font-size: 0.68rem;
       }
     }
   </style>
@@ -275,7 +277,7 @@
       const tbody = document.getElementById("league-body");
       tbody.innerHTML = "";
 
-      teams.forEach(t => {
+      teams.forEach((t) => {
         const row = document.createElement("tr");
 
         row.innerHTML = `
