--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       justify-content: center;
       align-items: flex-start;
       background: radial-gradient(circle at top, #0f172a 0%, #020617 50%, #000 100%);
-      padding: 0.75rem;              /* reduced from 1.5rem */
+      padding: 0.75rem;
       overflow-x: hidden;
     }
 
@@ -33,7 +33,7 @@
       max-width: 650px;
       background: #1e293b;
       border-radius: 1.2rem;
-      padding: 1rem 1rem 0.9rem;      /* reduced from 1.4rem */
+      padding: 1rem 1rem 0.9rem;
       box-shadow: 0 8px 20px rgba(0,0,0,0.55);
     }
 
@@ -41,7 +41,7 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      margin-bottom: 0.6rem;         /* reduced from 1rem */
+      margin-bottom: 0.6rem;
       gap: 0.4rem;
     }
 
@@ -77,17 +77,38 @@
       color: black;
     }
 
+    /* Navigation between leagues */
+    .nav {
+      width: 100%;
+      margin-top: 0.25rem;
+      margin-bottom: 0.35rem;
+      font-size: 0.8rem;
+    }
+    .nav a {
+      color: #e5e7eb;
+      text-decoration: none;
+      padding: 0.15rem 0.5rem;
+      border-radius: 999px;
+      margin-right: 0.25rem;
+      background: rgba(15,23,42,0.6);
+    }
+    .nav a.active {
+      background: #facc15;
+      color: #000;
+      font-weight: 700;
+    }
+
     /* --- TABLE WRAPPER --- */
     .table-wrapper {
-      margin-top: 0.5rem;            /* reduced from 1rem */
+      margin-top: 0.5rem;
       border-radius: 1rem;
       overflow: hidden;
       background: #0f172a;
-      box-shadow: 0 0 0 2px rgba(0,0,0,0.45); /* soft outline */
+      box-shadow: 0 0 0 2px rgba(0,0,0,0.45);
     }
 
     .table-scroll {
-      overflow: visible;             /* let page handle scroll */
+      overflow: visible; /* page handles scroll */
     }
 
     /* --- CLEAN TABLE WITH THIN SEPARATORS --- */
@@ -105,7 +126,7 @@
 
     th,
     td {
-      padding: 0.4rem 0.22rem;       /* slightly reduced */
+      padding: 0.4rem 0.22rem;
       font-size: 0.82rem;
       white-space: nowrap;
       text-align: center;
@@ -119,7 +140,6 @@
       letter-spacing: 0.12em;
     }
 
-    /* Horizontal thin separators */
     thead tr {
       border-bottom: 1px solid rgba(0,0,0,0.45);
     }
@@ -132,13 +152,11 @@
       border-bottom: none;
     }
 
-    /* Vertical thin separators */
     th + th,
     td + td {
       border-left: 1px solid rgba(0,0,0,0.25);
     }
 
-    /* Team column ~30% */
     th.team,
     td.team {
       width: 30%;
@@ -148,7 +166,6 @@
       font-weight: 600;
     }
 
-    /* Stat columns share remaining 70% */
     th.stat,
     td.stat {
       width: calc(70% / 9);
@@ -208,6 +225,10 @@
         padding: 0.24rem 0.18rem;
         font-size: 0.68rem;
       }
+
+      .nav {
+        font-size: 0.72rem;
+      }
     }
   </style>
 </head>
@@ -219,6 +240,11 @@
         <div class="tag">Mysters Rocket League</div>
         <h1>Premier League</h1>
         <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
+
+        <div class="nav">
+          <a href="index.html" class="active">Premier League</a>
+          <a href="b-league.html">B League</a>
+        </div>
       </div>
 
       <div class="right-meta">
@@ -229,7 +255,7 @@
 
     <section class="table-wrapper">
       <div class="table-scroll">
-        <table aria-label="Standings">
+        <table aria-label="Premier League Standings">
           <thead>
             <tr>
               <th class="stat">#</th>
